<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btnUyg1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="btnUyg1"
                        android:text="@string/u5_uyg1" />

                    <Button
                        android:id="@+id/btnUyg2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="btnUyg2"
                        android:text="@string/u5_uyg2" />

                    <Button
                        android:id="@+id/btnUyg3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="btnUyg3"
                        android:text="@string/u5_uyg3" />

                    <Button
                        android:id="@+id/btnUyg4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="btnUyg4"
                        android:text="@string/u5_uyg4" />

                    <Button
                        android:id="@+id/btnUyg5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="btnUyg5"
                        android:text="@string/u5_uyg5" />

                    <Button
                        android:id="@+id/btnUyg6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="btnUyg6"
                        android:text="@string/u5_uyg6" />

                    <Button
                        android:id="@+id/btnUyg7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="btnUyg7"
                        android:text="@string/u5_uyg7" />

                    <Button
                        android:id="@+id/btnUyg8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="btnUyg8"
                        android:text="@string/u5_uyg8" />

                    <Button
                        android:id="@+id/btnUyg9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="btnUyg9"
                        android:text="@string/u5_uyg9" />

                    <Button
                        android:id="@+id/btnUyg10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="btnUyg10"
                        android:text="@string/u5_uyg10" />

                    <Button
                        android:id="@+id/btnUyg11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="btnUyg11"
                        android:text="@string/u5_uyg11" />

                    <Button
                        android:id="@+id/btnUyg12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="btnUyg12"
                        android:text="@string/u5_uyg12" />

                    <Button
                        android:id="@+id/btnUyg13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="btnUyg13"
                        android:text="@string/u5_uyg13" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btnSS173"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/orange"
                        android:text="@string/u5_ss_173"
                        android:textColor="@color/black" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>