<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnUnite1"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="83dp"
        android:onClick="btnUnite1"
        android:text="@string/unite1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUnite2"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="83dp"
        android:onClick="btnUnite2"
        android:text="@string/unite2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUnite1" />

    <Button
        android:id="@+id/btnUnite3"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="83dp"
        android:onClick="btnUnite3"
        android:text="@string/unite3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUnite1" />

    <Button
        android:id="@+id/btnUnite4"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="83dp"
        android:onClick="btnUnite4"
        android:text="@string/unite4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUnite1" />

    <Button
        android:id="@+id/btnUnite5"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="83dp"
        android:onClick="btnUnite5"
        android:text="@string/unite5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUnite1" />

    <Button
        android:id="@+id/btnUnite6"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="83dp"
        android:onClick="btnUnite6"
        android:text="@string/unite6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUnite1" />

    <Button
        android:id="@+id/btnUnite7"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="83dp"
        android:onClick="btnUnite7"
        android:text="@string/unite7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUnite1" />

</androidx.constraintlayout.widget.ConstraintLayout>